2006-06-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure, configure.in: Fix logic in last change.

	* Doxyfile: Update to grab obmolecformat.h now in src/format/.

	* src/*.cpp, src/*.h, src/formats/*.cpp:
	Cleanup #includes for iostream, fstream -- only use iostream when
	needed (i.e. for cout, cerr, cin, clog declarations).

	* src/all.h, src/formats/all.h: Trim precompiled header templates
	to most common headers.
	
	* src/patty.cpp: Remove unused "COMPILE_PATTY_MAIN" #ifdef.

	* src/chiral.cpp: Remove unused floating-point methods.

	* src/rand.cpp: Remove unused #ifdef DEBUG code.

	* src/parsmart.cpp, src/formats/crkformat.cpp: Update calls to
	printf with calls to obErrorLog.

	* src/obutil.cpp (InternalToCartesian): Check index requests to
	avoid requesting past the vector end.
	(#ifdef): Remove ifdef, leave code for roots.

	* src/formats/ghemicalformat.cpp: Remove dummy atoms, which can
	cause problems. Mark all aromatic bonds as bondtype 'C'.

	* test/files/attype.00.smi: Add unspecified chiral alkane for @?
	SMARTS testing.
	
	* test/files/formalchargeresults.txt, test/files/ringresults.txt,
	test/files/formularesults.txt, test/files/smartsresults.txt:
	Update for changes to attype.00.smi using generate.sh.

	* test/Makefile.am: Cleanup.

2006-06-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure, configure.in, src/all.h, src/formats/all.h,
	Makefile.in: Add experimental support for precompiled headers with
	GCC, using the --enable-precompiled-headers flag to the configure
	script. Haven't performed much timing/optimization -- appears to
	help about 10-12%.

	* src/base.h, src/mol.h, src/obconversion.h, src/generic.h:
	Warning eliminations and documentation improvements from Carsten.

	* src/obiter.cpp: Further improvements to documentation on DFS and
	BFS iterators.

	* src/chains.cpp: Updated call to fprintf(... stderr) to use
	modern OBMessageHandler.

	* scripts/*: Regenerate for latest header changes.
